--- a/LibraryMvcApp/appsettings.json
+++ b/LibraryMvcApp/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=.;Database=LibraryMvcDb;Trusted_Connection=True;TrustServerCertificate=True"
+    "DefaultConnection": "Server=.;Database=LibraryMvcDbV02;Trusted_Connection=True;TrustServerCertificate=True"
   },
   "AdminUser": {
     "Username": "admin",
