--- a/LibraryMvcApp/LibraryMvcApp.csproj
+++ b/LibraryMvcApp/LibraryMvcApp.csproj
@@ -33,9 +33,13 @@
     <PackageReference Include="Microsoft.Extensions.Identity.Core" Version="8.0.0" />
     <PackageReference Include="Microsoft.Extensions.Identity.Stores" Version="8.0.0" />
     <PackageReference Include="Microsoft.Office.Interop.Word" Version="15.0.4797.1004" />
+    <PackageReference Include="PdfPig" Version="0.1.12" />
     <PackageReference Include="Syncfusion.DocIO.Net.Core" Version="31.2.15" />
     <PackageReference Include="Syncfusion.DocIORenderer.Net.Core" Version="31.2.15" />
     <PackageReference Include="Syncfusion.Pdf.Net.Core" Version="31.2.15" />
-  </ItemGroup>
+    <PackageReference Include="Tesseract" Version="5.2.0" />
+  </ItemGroup>	<ItemGroup>
+  <Folder Include="Migrations\" />
+</ItemGroup>
 
 </Project>
